plugins {
    id 'org.springframework.boot' version '2.7.4'
    id 'io.spring.dependency-management' version '1.0.14.RELEASE'
    id 'java'
}

group 'road-trip'
version '1.0-SNAPSHOT'
sourceCompatibility = '16'

repositories {
    mavenCentral()
}

dependencies {
    // Cool Utils
    implementation 'org.apache.commons:commons-lang3:3.0'
    implementation 'org.apache.httpcomponents:httpclient'
    testImplementation 'org.projectlombok:lombok:1.18.20'
    implementation 'org.projectlombok:lombok:1.18.20'
    annotationProcessor 'org.projectlombok:lombok:1.18.20'

    // JSON Parsing
    implementation group: 'com.googlecode.json-simple', name: 'json-simple', version: '1.1.1'

    // JWT
    implementation 'com.nimbusds:nimbus-jose-jwt:9.25.4'

    // Spring Boot
    implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
    implementation 'org.springframework.boot:spring-boot-starter-security'
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.springframework.boot:spring-boot-starter-validation:2.4.0'
    implementation 'org.springframework.boot:spring-boot-starter-security'

    // MYSQL
    runtimeOnly 'mysql:mysql-connector-java'

    implementation 'com.fasterxml.jackson.core:jackson-databind:2.13.4'

    developmentOnly 'org.springframework.boot:spring-boot-devtools'
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
}

tasks.test {
    useJUnitPlatform()
}
